--- a/css/main.css
+++ b/css/main.css
@@ -366,6 +366,7 @@ body {
     flex-direction: row;
     justify-content: center; }
     body footer .footerWrapper {
+      width: 70vw;
       display: grid;
       grid-template-columns: repeat(3, 1fr);
       grid-template-rows: repeat(3, 1fr);
