--- a/css/main.css
+++ b/css/main.css
@@ -46,7 +46,8 @@ body {
       height: 85vh;
       background: url("../imgs/tunnelView.jpeg") 100%/cover no-repeat;
       color: white;
-      position: relative; }
+      position: relative;
+      padding-right: 150px; }
       body header .landingPageWrapper .headerCenterContent .hamburgerMenu {
         width: 60vw;
         display: flex;
@@ -66,7 +67,7 @@ body {
           border: .1px solid transparent;
           border-radius: 1rem; }
         body header .landingPageWrapper .headerCenterContent .hamburgerMenu .openMenu {
-          opacity: 0; }
+          opacity: 1; }
         body header .landingPageWrapper .headerCenterContent .hamburgerMenu .bar1.change {
           transform: rotate(-45deg) translate(-5px, 6px);
           background-color: #ef3e5d; }
@@ -76,7 +77,7 @@ body {
         body header .landingPageWrapper .headerCenterContent .hamburgerMenu .openMenu.change {
           opacity: 1; }
         body header .landingPageWrapper .headerCenterContent .hamburgerMenu .bar2.change {
-          opacity: 0; }
+          opacity: 1; }
       body header .landingPageWrapper .headerCenterContent .headerNav {
         display: flex;
         flex-direction: row;
@@ -410,7 +411,7 @@ body {
       color: #D4F4DD;
       border: none; }
       body footer .footerBottom ul {
-        margin-right: 5rem; }
+        margin-right: 2rem; }
       body footer .footerBottom img {
         width: 1.3rem;
         height: 1.3rem; }
@@ -429,6 +430,16 @@ html {
   ##Device = Desktops
   ##Screen = 1281px to higher resolution desktops
 */
+@media (min-width: 1281px) {
+  body header .landingPageWrapper .headerCenterContent {
+    padding-right: 0px; }
+    body header .landingPageWrapper .headerCenterContent nav {
+      justify-content: space-around; }
+      body header .landingPageWrapper .headerCenterContent nav .hamburgerMenu {
+        display: none; }
+      body header .landingPageWrapper .headerCenterContent nav .fullMenu {
+        display: inherit; } }
+
 /*
   ##Device = Laptops, Desktops
   ##Screen = B/w 1025px to 1280px
@@ -445,6 +456,16 @@ html {
   .addedPadding {
     padding-left: 50px;
     padding-right: 50px; }
+  body header .landingPageWrapper {
+    padding-right: 0px; }
+    body header .landingPageWrapper .headerCenterContent {
+      padding-right: 0px; }
+      body header .landingPageWrapper .headerCenterContent nav {
+        justify-content: space-between; }
+        body header .landingPageWrapper .headerCenterContent nav .hamburgerMenu {
+          display: none; }
+        body header .landingPageWrapper .headerCenterContent nav .fullMenu {
+          display: inherit; }
   body .centerInfo .centerWrapper .aboutUsCards .cardOne .aboutPicture {
     grid-column: 1 / span 1;
     width: 40vw; } }
@@ -454,19 +475,24 @@ html {
   ##Screen = B/w 768px to 1024px
 */
 @media only screen and (min-width: 768px) and (max-width: 1024px) and (orientation: portrait) {
-  html {
-    font-size: 14px; }
   .addedPadding {
     padding-left: 30px;
     padding-right: 30px; }
   body .landingPageWrapper {
     height: 85vh !important; }
-    body .landingPageWrapper .headerCenterContent .headerWords {
-      width: 80vw !important; }
-      body .landingPageWrapper .headerCenterContent .headerWords h1 {
-        font-size: 2rem; }
-      body .landingPageWrapper .headerCenterContent .headerWords p {
-        font-size: 5rem; }
+    body .landingPageWrapper .headerCenterContent {
+      padding-right: 0px; }
+      body .landingPageWrapper .headerCenterContent nav {
+        width: 10vw !important;
+        justify-content: space-between !important; }
+        body .landingPageWrapper .headerCenterContent nav .fullMenu {
+          display: none  !important; }
+      body .landingPageWrapper .headerCenterContent .headerWords {
+        width: 80vw !important; }
+        body .landingPageWrapper .headerCenterContent .headerWords h1 {
+          font-size: 2rem; }
+        body .landingPageWrapper .headerCenterContent .headerWords p {
+          font-size: 5rem; }
     body .landingPageWrapper .visitCardContainer .visitCard {
       width: 100vw !important; }
       body .landingPageWrapper .visitCardContainer .visitCard .visitImg {
@@ -516,10 +542,19 @@ html {
   .addedPadding {
     padding-left: 30px;
     padding-right: 30px; }
+  body header .landingPageWrapper .headerCenterContent {
+    padding-right: 0px; }
+    body header .landingPageWrapper .headerCenterContent nav {
+      width: 120vw;
+      justify-content: space-around; }
+      body header .landingPageWrapper .headerCenterContent nav .fullMenu {
+        display: none; }
   body .centerInfo .centerWrapper .aboutUsCards .cardOne .aboutPicture {
     grid-column: 1 / span 1;
     width: 40vw;
-    align-self: center; } }
+    align-self: center; }
+  body footer .footerBottom ul {
+    margin-right: 1rem; } }
 
 /*
   ##Device = Low Resolution Tablets, Mobiles (Landscape)
@@ -533,12 +568,19 @@ html {
     padding-right: 30px; }
   body .landingPageWrapper {
     height: 85vh !important; }
-    body .landingPageWrapper .headerCenterContent .headerWords {
-      width: 80vw !important; }
-      body .landingPageWrapper .headerCenterContent .headerWords h1 {
-        font-size: 2rem; }
-      body .landingPageWrapper .headerCenterContent .headerWords p {
-        font-size: 5rem; }
+    body .landingPageWrapper .headerCenterContent {
+      padding-right: 0px; }
+      body .landingPageWrapper .headerCenterContent nav {
+        width: 115vw !important;
+        justify-content: space-between !important; }
+        body .landingPageWrapper .headerCenterContent nav .fullMenu {
+          display: none !important; }
+      body .landingPageWrapper .headerCenterContent .headerWords {
+        width: 80vw !important; }
+        body .landingPageWrapper .headerCenterContent .headerWords h1 {
+          font-size: 2rem; }
+        body .landingPageWrapper .headerCenterContent .headerWords p {
+          font-size: 5rem; }
     body .landingPageWrapper .visitCardContainer .visitCard {
       width: 100vw !important; }
       body .landingPageWrapper .visitCardContainer .visitCard .visitImg {
